feat: made an accordion in courses block

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                         <img src="images/courses_ellipse.png" alt="ellipse">
                         <h3>AI - Junior Level.</h3>
                         <span>Продолжительность 1 год</span>
-                        <button>
+                        <button class="button_courses">
                             <img src="images/courses_button.png" alt="button">
                         </button>
                     </div>
@@ -528,7 +528,7 @@
             </div>
         </div>
 
-        <!--Vacancies-->
+        <!--Vacancies block-->
         <div class="vacancies">
             <div class="container">
                 <div class="vacancies_flex">
@@ -588,57 +588,61 @@
                 </div>
             </div>
         </div>
+    </main>
 
-        <!--Footer-->
-        <footer class="footer">
-            <div class="container">
-                <div class="footer_flex">
-                    <div class="footer_flex_left">
-                        <div class="footer_logo">
-                            <img src="images/logo.png" alt="Logo">
-                        </div>
+    <!--Footer block-->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer_flex">
+                <div class="footer_flex_left">
+                    <div class="footer_logo">
+                        <img src="images/logo.png" alt="Logo">
                     </div>
-                    <div class="footer_flex_right">
-                        <div class="mail_phone">
-                            <div class="footer_mail">
-                            <img src="images/mail_icon.png" alt="Mail">
+                </div>
+                <div class="footer_flex_right">
+                    <div class="mail_phone">
+                        <div class="footer_mail">
+                        <img src="images/mail_icon.png" alt="Mail">
+                        <div class="link_mail">
                             <a target="_blank" href="mailto:veravlaedu@gmail.com ">veravlaedu@gmail.com </a>
                         </div>
+                    </div>
                         <div class="footer_phone">
                             <img src="images/phone_icon.png" alt="Phone">
                             <a target="_blank" href="tel:+8210 75269192">+ 82 (10) 7526-9192 </a>
                         </div>
-                        </div>
-                        <div class="footer_social">
-                            <h3>Мы в соц сетях</h3>
-                            <a target="_blank" href="https://www.facebook.com/">
-                                <img src="images/icon_facebook.png" alt="Facebook">
-                            </a>
-                            <a target="_blank" href="https://tenchat.ru/">
-                                <img src="images/icon_vector.png" alt="Vector">
-                            </a>
-                            <a target="_blank" href="https://www.youtube.com/">
-                                <img src="images/icon_youtube.png" alt="Youtube">
-                            </a>
-                            <a target="_blank" href="https://www.whatsapp.com/">
-                                <img src="images/icon_whatsapp.png" alt="Whatsapp">
-                            </a>
-                            <a target="_blank" href="">
-                                <img src="images/icon_ico_cacao.png" alt="Ico_cacao">
-                            </a>
-                        </div>
+                    </div>
+                    <div class="footer_social">
+                        <h3>Мы в соц сетях</h3>
+                        <a target="_blank" href="https://www.facebook.com/">
+                            <img src="images/icon_facebook.png" alt="Facebook">
+                        </a>
+                        <a target="_blank" href="https://tenchat.ru/">
+                            <img src="images/icon_vector.png" alt="Vector">
+                        </a>
+                        <a target="_blank" href="https://www.youtube.com/">
+                            <img src="images/icon_youtube.png" alt="Youtube">
+                        </a>
+                        <a target="_blank" href="https://www.whatsapp.com/">
+                            <img src="images/icon_whatsapp.png" alt="Whatsapp">
+                        </a>
+                        <a target="_blank" href="">
+                            <img src="images/icon_ico_cacao.png" alt="Ico_cacao">
+                        </a>
                     </div>
                 </div>
             </div>
-            <div class="footer_copyright">
-                <div class="first_line"></div>
-                <div class="copyright">
-                    Copyright © 2021 VeraVla edu.
-                    All rights reserved
-                </div>
-                <div class="second_line"></div>
+        </div>
+        <div class="footer_copyright">
+            <div class="first_line"></div>
+            <div class="copyright">
+                Copyright © 2021 VeraVla edu.
+                All rights reserved
             </div>
-        </footer>
-    </main>
+            <div class="second_line"></div>
+        </div>
+    </footer>
+
+    <script src="js/app.js"></script>
 </body>
 </html>
