--- a/index.html
+++ b/index.html
@@ -643,6 +643,20 @@
         </div>
     </footer>
 
+
+    <!--Modal-->
+    <div class="modal">
+        <div class="modal_dialog">
+            <div class="modal_content">
+                <h2>
+                    <span>Записаться</span> на ознакомительный вебинар
+                </h2>
+                <form class="modal_form" action="#">
+
+                </form>
+            </div>
+        </div>
+    </div>
     <script src="js/app.js"></script>
 </body>
 </html>
