feat: finished modal window

--- a/index.html
+++ b/index.html
@@ -663,11 +663,15 @@
                     </div>
                     <div class="group_phone">
                         <label for="phone" class="label_phone">Номер телефона:</label>
-                        <input type="tel" class="input_phone" name="phone" required>
+                        <div class="gradient">
+                            <input type="tel" class="input_phone" name="phone" required>
+                        </div>
                     </div>
                     <div class="group_email">
                         <label for="email" class="label_email" required>Ваш e-mail:</label>
-                        <input type="email" class="input_email" name="email">
+                        <div class="gradient">
+                            <input type="email" class="input_email" name="email">
+                        </div>
                     </div>
                     <div class="form_button">
                         <button>Записаться</button>
