--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                 </div>
                 <div class="header_button">
-                    <button>Записать на ознакомительный вебинар</button>
+                    <button class="open-modal">Записать на ознакомительный вебинар</button>
                 </div>
             </div>
         </div>
@@ -145,7 +145,7 @@
                     </div>
                 </div>
                 <div class="intelligence_button">
-                    <button>Записаться на ознакомительный вебинар</button>
+                    <button class="open-modal">Записаться на ознакомительный вебинар</button>
                 </div>
             </div>
         </div>
@@ -256,7 +256,7 @@
                         </div>
                     </div>
                     <div class="learning_button">
-                        <button>Записаться на ознакомительный семинар</button>
+                        <button class="open-modal">Записаться на ознакомительный семинар</button>
                     </div>
                 </div>
                 <div class="learning_right">
@@ -428,7 +428,9 @@
                     </div>
                 </div>
                 <div class="courses_button">
-                    <button>Записаться на ознакомительный вебинар</button>
+                    <button class="modal-open">
+                        Записаться на ознакомительный вебинар
+                    </button>
                 </div>
             </div>
         </div>
@@ -645,7 +647,7 @@
 
 
     <!--Modal window-->
-    <div class="modal">
+    <div class="modal hide">
         <div class="modal_dialog">
             <div class="modal_content">
                 <div class="modal_close">
@@ -680,6 +682,7 @@
             </div>
         </div>
     </div>
+
     <script src="js/app.js"></script>
 </body>
 </html>
