feat: start and finished animation scroll

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <main>
         <!--Reasons block-->
-        <div class="reasons">
+        <div class="reasons scroll">
             <div class="container">
                 <h2><span>7 причин</span> почему  <br> именно мы?</h2>
                 <div class="reasons_cards">
@@ -102,7 +102,7 @@
         </div>
 
         <!--Intelligence block-->
-        <div class="intelligence">
+        <div class="intelligence scroll">
             <div class="container">
                 <h2> <span>Искусственный <br> интеллект</span> - это круто? </h2>
                 <div class="intelligence_section_inner">
@@ -151,7 +151,7 @@
         </div>
 
         <!--Important block-->
-        <div class="important">
+        <div class="important scroll">
             <div class="container">
                 <h2><span>Важно</span> понимать что</h2>
                 <div class="important_first_line">
@@ -202,7 +202,7 @@
         </div>
 
         <!--Learning block-->
-        <div class="learning">
+        <div class="learning scroll">
             <div class="container">
                 <div class="learning_left">
                     <h2>Почему именно наш курс ? <br>
@@ -266,7 +266,7 @@
         </div>
 
         <!--Courses block-->
-        <div class="courses">
+        <div class="courses scroll">
             <div class="container">
                 <h2> <span>Что я узнаю</span> из этих курсов?</h2>
                 <div class="small_title">
@@ -436,7 +436,7 @@
         </div>
 
         <!--Course_author block-->
-        <div class="course_autor">
+        <div class="course_autor scroll">
             <div class="container">
                 <div class="course_autor_flex">
                     <div class="course_autor_left">
@@ -470,7 +470,7 @@
         </div>
 
         <!--School_announcements block-->
-        <div class="school">
+        <div class="school scroll">
             <div class="container">
                 <div class="school_flex">
                     <h2>Обьявления школы</h2>
@@ -531,7 +531,7 @@
         </div>
 
         <!--Vacancies block-->
-        <div class="vacancies">
+        <div class="vacancies scroll">
             <div class="container">
                 <div class="vacancies_flex">
                     <h2>Вакансии</h2>
@@ -593,7 +593,7 @@
     </main>
 
     <!--Footer block-->
-    <footer class="footer">
+    <footer class="footer scroll">
         <div class="container">
             <div class="footer_flex">
                 <div class="footer_flex_left">
