feat: started media_992px

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                 решать реальные задачи <br>
                                 на работе.
                             </div>
-                            <img src="images/important_icon4.png" alt="Work">
+                            <img class="img_padding" src="images/important_icon4.png" alt="Work">
                         </div>
                     </div>
                 </div>
